<resources>
    <string name="app_name">Salveo</string>
    <string name="typical_anginal_text">typical angina</string>
    <string name="atypical_anginal_text">atypical angina</string>
    <string name="non_anginal_text">non anginal</string>
    <string name="asymptomatic_text">asymptomatic</string>
    <string name="salveo">Salveo</string>
    <string name="prediction">prediction</string>
    <string name="predict">predict</string>
    <string name="gender_choice">what is your gender?</string>
    <string name="chest_pain_choice">what kind of chest pain do you experience?</string>
    <string name="typical_angina">typical angina</string>
    <string name="age_choice">how young are you?</string>
    <string name="blood_pressure_choice">tell us about your blood pressure (in mm Hg)</string>
    <string name="heart_rate_choice">tell us about your maximum heart rate (in bpm)</string>
    <string name="cholesterol_level_choice">tell us about your cholesterol level (in mg/dl)</string>
    <string name="start_analysis">start analysis</string>
    <string name="confirm_your_data_for_accurate_predictions">confirm your data for accurate predictions</string>
    <string name="gender_female">gender: female</string>
    <string name="age_24_years">age: 24 years</string>
    <string name="heart_pain_category_non_anginal_pain">heart pain category: non anginal pain</string>
    <string name="resting_blood_pressure_120_mm_hg">resting blood pressure: 120 mm Hg</string>
    <string name="maximum_heart_rate_120_bpm">maximum heart rate: 120 bpm</string>
    <string name="cholestrol_level_120_mg_dl">cholestrol level: 120 mg/dl</string>
    <string name="made_an_oopsie">made an oopsie</string>
    <string name="confirm">confirm</string>

    <string-array name="heart_health_tips">
        <item>Smoking is one of the main causes of coronary heart disease. A year after giving up, your risk of a heart attack falls to about half that of a smoker</item>
        <item>Getting – and staying – active can reduce your risk of developing heart disease. It can also be a great mood booster and stress buster</item>
        <item>Being overweight can increase your risk of heart disease. Stick to a healthy, balanced diet low in fat and sugar, with plenty of fruit and vegetables, combined with regular physical activity</item>
        <item>Eat plenty of fibre to help lower your risk of heart disease – aim for at least 30g a day</item>
        <item>Eating too many foods that are high in saturated fat can raise the level of cholesterol in your blood. This increases your risk of heart disease</item>
        <item>Eat at least 5 portions of a variety of fruit and vegetables a day. They\'re a good source of fibre, vitamins and minerals</item>
        <item>Eat fish at least a week, including a portion of oily fish. Fish such as pilchards, sardines and salmon are a source of omega-3 fats, which may help protect against heart disease</item>
    </string-array>

</resources>
