<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/verification_container"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet_main"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/confirm_your_data_for_accurate_predictions"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_gender_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/gender_female"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_age_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/age_24_years"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_chest_pain_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/heart_pain_category_non_anginal_pain"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_blood_pressure_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/resting_blood_pressure_120_mm_hg"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_heart_rate_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/maximum_heart_rate_120_bpm"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_cholesterol_level_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cholestrol_level_120_mg_dl"
        android:textColor="@color/colorText"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_take_back"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made_an_oopsie"
            app:strokeWidth="2dp"
            app:strokeColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/btn_confirm_details"
            app:layout_constraintEnd_toStartOf="@+id/btn_confirm_details"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_confirm_details" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/confirm"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_take_back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>