<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="590dp"
    android:orientation="vertical"
    tools:background="@color/colorPrimaryDark"
    tools:layout_height="700dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:alpha="0.4"
        android:src="@drawable/sheet_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/predict"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_height="700dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_choice"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_man"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_man"
                android:tint="@color/lightGrey"
                app:layout_constraintBottom_toBottomOf="@+id/iv_woman"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_woman"
                app:layout_constraintTop_toTopOf="@+id/iv_woman" />

            <ImageView
                android:id="@+id/iv_woman"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_woman"
                android:tint="@color/lightGrey"
                app:layout_constraintEnd_toStartOf="@+id/iv_man"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/chest_pain_choice"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_woman" />

            <RadioGroup
                android:id="@+id/rg_chest_pain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_radio_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_typical_angina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/typical_angina"
                        android:textColor="@color/colorText"
                        app:layout_constraintBottom_toTopOf="@+id/rb_non_anginal"
                        app:layout_constraintEnd_toStartOf="@+id/rb_atypical_angina"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_atypical_angina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/atypical_anginal_text"
                        android:textColor="@color/colorText"
                        app:layout_constraintBottom_toTopOf="@+id/rb_asymptomatic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/rb_typical_angina"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_non_anginal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/non_anginal_text"
                        android:buttonTint="@color/colorPrimary"
                        android:textColor="@color/colorText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/rb_typical_angina"
                        app:layout_constraintTop_toBottomOf="@+id/rb_typical_angina" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rb_asymptomatic"
                        android:layout_width="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:layout_height="wrap_content"
                        android:text="@string/asymptomatic_text"
                        android:textColor="@color/colorText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/rb_atypical_angina"
                        app:layout_constraintTop_toBottomOf="@+id/rb_atypical_angina" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/age_choice"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg_chest_pain" />

            <com.google.android.material.slider.Slider
                android:id="@+id/ms_age_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:stepSize="1"
                android:valueFrom="5"
                android:valueTo="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/blood_pressure_choice"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ms_age_slider" />

            <com.google.android.material.slider.Slider
                android:id="@+id/ms_blood_pressure_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:stepSize="1"
                android:valueFrom="70"
                android:valueTo="200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/heart_rate_choice"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ms_blood_pressure_slider" />

            <com.google.android.material.slider.Slider
                android:id="@+id/ms_heart_rate_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:stepSize="1"
                android:valueFrom="70"
                android:valueTo="200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/cholesterol_level_choice"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ms_heart_rate_slider" />

            <com.google.android.material.slider.Slider
                android:id="@+id/ms_cholesterol_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="600"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start_analysis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:insetTop="4dp"
                android:insetBottom="4dp"
                android:text="@string/start_analysis"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ms_cholesterol_slider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>